--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-router": "^3.1.3",
     "vue-schart": "^2.0.0",
     "vuedraggable": "^2.17.0",
-    "js-base64": "^3.2.4"
+    "js-base64": "^3.2.4",
+    "bejson": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
