--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "element-ui": "^2.11.0",
-    "lodash": "^4.17.19",
+    "codemirror": "^5.57.0",
+    "element-ui": "^2.13.2",
+    "highlight.js": "^10.2.0",
+    "js-base64": "^3.5.2",
+    "js-md5": "^0.7.3",
+    "lodash": "^4.17.20",
+    "mavon-editor": "^2.9.0",
     "miment": "^0.0.9",
-    "vue": "^2.6.10",
+    "vue": "^2.6.12",
+    "vue-codemirror": "^4.0.6",
     "vue-cropperjs": "^3.0.0",
-    "vue-i18n": "^8.10.0",
-    "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.1.3",
+    "vue-i18n": "^8.21.1",
+    "vue-router": "^3.4.3",
     "vue-schart": "^2.0.0",
-    "vuedraggable": "^2.17.0",
-    "js-base64": "^3.2.4",
-    "bejson": "^1.0.0"
+    "vuedraggable": "^2.24.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "compression-webpack-plugin": "^3.0.0",
+    "@vue/cli-service": "^4.5.6",
+    "compression-webpack-plugin": "^6.0.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0"
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.12",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "//": {
     "mavon-editor": "^2.6.17",
