--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.20",
     "mavon-editor": "^2.9.0",
     "miment": "^0.0.9",
+    "uglify-js": "^3.10.4",
     "vue": "^2.6.12",
     "vue-codemirror": "^4.0.6",
     "vue-cropperjs": "^3.0.0",
@@ -32,6 +33,7 @@
     "compression-webpack-plugin": "^6.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-clipboard2": "^0.3.1",
     "vue-template-compiler": "^2.6.12",
     "webpack-bundle-analyzer": "^3.6.0"
   },
