--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-i18n": "^8.21.1",
     "vue-router": "^3.4.3",
     "vue-schart": "^2.0.0",
-    "vuedraggable": "^2.24.1"
+    "vuedraggable": "^2.24.1",
+    "iconv-lite": "^0.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
