--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "pound-manger-system",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "npm run serve",
+    "dev": "npm run serve --debug",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-polyfill": "^6.26.0",
     "codemirror": "^5.57.0",
     "element-ui": "^2.13.2",
