--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules
 example.html
 favicon.ico
+
 # local env files
 .env.local
 .env.*.local
@@ -10,6 +11,7 @@ favicon.ico
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -19,4 +21,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
-/package-lock.json
