--- a/package.json
+++ b/package.json
@@ -1,47 +1,75 @@
 {
-  "name": "pound-manger-system",
-  "version": "1.0.1",
+  "name": "os-tools",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
-    "dev": "npm run serve --debug",
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "babel-polyfill": "^6.26.0",
-    "codemirror": "^5.57.0",
-    "element-ui": "^2.13.2",
-    "highlight.js": "^10.2.0",
-    "iconv-lite": "^0.6.2",
-    "js-base64": "^3.5.2",
-    "js-md5": "^0.7.3",
-    "lodash": "^4.17.20",
-    "mavon-editor": "^2.9.0",
-    "miment": "^0.0.9",
-    "uglify-js": "^3.10.4",
-    "vue": "^2.6.12",
-    "vue-codemirror": "^4.0.6",
-    "vue-cropperjs": "^3.0.0",
-    "vue-i18n": "^8.21.1",
-    "vue-router": "^3.4.3",
-    "vue-schart": "^2.0.0",
-    "vuedraggable": "^2.24.1"
+    "@vueuse/core": "~7.5.3",
+    "codemirror": "~5.65.2",
+    "axios": "~0.26.1",
+    "core-js": "~3.8.3",
+    "dayjs": "~1.11.0",
+    "js-md5": "~0.7.3",
+    "lodash": "~4.17.20",
+    "element-plus": "~2.0.5",
+    "vue": "~3.2.31",
+    "vue-class-component": "~8.0.0-0",
+    "vue-router": "~4.0.14",
+    "vue-types": "~4.1.1",
+    "vue-worker": "~1.2.1",
+    "vuex": "~4.0.2",
+    "vue-clipboard3": "~2.0.0",
+    "vue-codemirror": "~4.0.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-service": "^4.5.6",
-    "compression-webpack-plugin": "^6.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-clipboard2": "^0.3.1",
-    "vue-template-compiler": "^2.6.12",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "@babel/core": "~7.20.5",
+    "@babel/preset-typescript": "~7.16.7",
+    "@types/lodash-es": "~4.17.5",
+    "@types/node": "~17.0.10",
+    "@types/webpack-env": "~1.16.3",
+    "@types/codemirror": "~5.60.5",
+    "@typescript-eslint/eslint-plugin": "~5.4.0",
+    "@typescript-eslint/parser": "~5.4.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-typescript": "~9.1.0",
+    "eslint": "~7.32.0",
+    "eslint-plugin-vue": "~8.0.3",
+    "postcss": "~8.4.5",
+    "postcss-html": "~1.3.0",
+    "postcss-import": "~14.0.2",
+    "sass": "~1.49.0",
+    "sass-loader": "~12.6.0",
+    "stylelint": "~14.2.0",
+    "stylelint-config-prettier": "~9.0.3",
+    "stylelint-config-standard": "~24.0.0",
+    "stylelint-order": "^5.0.0",
+    "typescript": "~4.5.5",
+    "tailwindcss": "~3.0.15",
+    "webpack-bundle-analyzer": "~4.5.0"
   },
-  "//": {
-    "mavon-editor": "^2.6.17",
-    "echarts": "^4.5.0",
-    "vue-print-nb": "^1.4.0",
-    "vue-image-previewer": "^0.1.4"
+  "lint-staged": {
+    "*.{js,ts}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.vue": [
+      "prettier --write",
+      "eslint --fix",
+      "stylelint --fix"
+    ],
+    "*.{scss,html}": [
+      "stylelint --fix",
+      "prettier --write"
+    ]
   }
 }
