--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-	"tabWidth": 4,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 140
+  "tabWidth": 2,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "printWidth": 140,
+  "semi": false
 }
